# lineart

./: .gitignore  AGENTS.md  __main__.py  app.py  batch.py  cli.py  engine.py  exceptions.py  history.py  improvement-suggestions.md  lessons.md  plan.md  pyproject.toml  requirements.txt  run.bat  schemas.py  spec.md  todos.md
${PROJECT_ROOT}/.opencode/: memory.db
.github/workflows/: ci.yml
.opencode/status-footer/: state.json
adapters/: __init__.py  base.py  comfyui.py  dalle.py  midjourney.py  novelai.py  stable_diffusion.py
characters/: bushi.yaml  court_lady.yaml  cyber_knight.yaml  fantasy_elf.yaml  kikai.yaml  magical_girl.yaml  meiji_schoolgirl.yaml  republican_lady.yaml  rock_musician.yaml  ronin.yaml  sci_fi_mercenary.yaml  sword_maiden.yaml
docs/superpowers/plans/: 2026-06-19-characters-and-webgui.md  2026-06-21-lineart-improvement-plan.md
i18n/: en.yaml  zh.yaml
static/: style.css
templates/: _error.html  _result_card.html  _result_cards.html  action_pose.j2  chibi_version.j2  clothing_breakdown.j2  color_scheme.j2  expressions.j2  hair_breakdown.j2  history.html  index.html  three_view.j2  weapon_prop.j2
tests/: conftest.py  test_adapters.py  test_batch.py  test_engine.py  test_history.py
