[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lineart"
version = "0.3.0"
description = "Anime character design prompt generator for AI image models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.0,<4.0",
    "flask>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
